fixed conflicts on overlays and z-index (updated scripts)

--- a/CSS/global_style.css
+++ b/CSS/global_style.css
@@ -227,6 +227,21 @@
   border-radius: 50px;
 }
 
+.menu-search.active {
+  z-index: 1;
+}
+
+#menu-search {
+  display: flex;
+  z-index: 1000;
+  background-color: white;
+  border-radius: 50px;
+}
+
+#menu-search.hiddenIndex {
+  z-index: 1;
+}
+
 .menu-search-shop {
   display: flex;
   align-items: center;
